<resources>
    <string name="app_name">Car share</string>
    <string name="cars_botton">Cars</string>
    <string name="browser_botton">Browser</string>
    <string name="user_botton">user</string>
    <string name="user_name">User_name</string>
    <string name="login_in">Login In</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="login">Login</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="card_number">Card Number</string>
    <string name="date_of_expiry">Date of Expiry</string>
    <string name="first_name">First Name</string>
    <string name="first_namelogin">First name</string>
    <string name="last_namelogin">Last name</string>
    <string name="email_get_code">Email get code</string>
    <string name="vias_card_number">vias card number</string>
    <string name="date_xx_xx">DATE XX/XX</string>
    <string name="verification_code">Verification code</string>
    <string name="set_your_account">Set your account</string>
    <string name="password">Password</string>
    <string name="code_in_email">Code in email</string>
    <string name="set_your_password">Set your password</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="no_account">No account?</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="Placeholder">0</string>
    <string name="Placeholder2">car share</string>
    <string name="cars">cars</string>
    <string name="todo">TODO</string>
</resources>