<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="136.66dp"
        android:layout_height="55dp"
        android:background="#87CEFA"
        android:text="@string/cars_botton"
        android:textColor="#3949AB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="136.66dp"
        android:layout_height="55dp"
        android:Color="#87CEFA"
        android:background="#87CEFA"
        android:text="@string/browser_botton"
        android:textColor="#3949AB"
        app:icon="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="136.66dp"
        android:layout_height="55dp"
        android:layout_marginStart="138dp"
        android:layout_marginBottom="187dp"
        android:Color="#87CEFA"
        android:background="#87CEFA"
        android:text="@string/login_in"
        android:textColor="#3949AB"
        app:icon="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="136.66dp"
        android:layout_height="55dp"
        android:background="#87CEFA"
        android:text="@string/user_botton"
        android:textColor="#3949AB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:text="@string/login"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="95dp"
        android:text="@string/account"
        android:textColor="#3949AB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="34dp"
        android:text="@string/password"
        android:textColor="#3949AB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="26dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="43dp"
        android:text="@string/no_account"
        android:textColor="#3949AB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginStart="87dp"
        android:text="@string/click_here_to_register"
        android:textColor="#3949AB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:importantForAccessibility="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="143dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:singleLine="true"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>